update user and profile a bit, add motd

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,17 +2,20 @@
 FROM centos:centos7
 ADD gotty /bin/gotty
 RUN yum install -y epel-release
-RUN yum install openssh-clients bash-completion weechat
-RUN useradd joshua
-USER joshua
-RUN mkdir /home/joshua/.ssh
-RUN mkdir /home/joshua/.weechat
-ADD known_hosts /home/joshua/.ssh/known_hosts
-ADD id_rsa /home/joshua/.ssh/id_rsa
-ADD .weechat /home/joshua/.weechat
-ADD Jonathan_Mainguy_Profile/* /home/joshua/
+RUN yum install -y openssh-clients bash-completion weechat
+RUN useradd jmainguy
+RUN mkdir /home/jmainguy/.ssh
+RUN mkdir /home/jmainguy/.weechat
+ADD known_hosts /home/jmainguy/.ssh/known_hosts
+ADD id_rsa /home/jmainguy/.ssh/id_rsa
+ADD .weechat /home/jmainguy/.weechat
+ADD Jonathan_Mainguy_Profile/* /home/jmainguy/
 EXPOSE 8080
 ENV TERM=xterm
-WORKDIR /home/joshua
-ADD .gotty /home/joshua/.gotty
+WORKDIR /home/jmainguy
+ADD .gotty /home/jmainguy/.gotty
+ADD motd /etc/motd
+ADD bashrc /home/jmainguy/.bashrc
+RUN chown -R jmainguy:jmainguy /home/jmainguy
+USER jmainguy
 CMD ["/bin/gotty", "--once", "-w", "/bin/bash"]
