--- a/docker/.weechat/irc.conf
+++ b/docker/.weechat/irc.conf
@@ -129,7 +129,7 @@ sasl_mechanism = plain
 sasl_password = ""
 sasl_timeout = 15
 sasl_username = ""
-ssl = off
+ssl = on
 ssl_cert = ""
 ssl_dhkey_size = 2048
 ssl_fingerprint = ""
@@ -138,39 +138,39 @@ ssl_verify = on
 username = "soh_re-visitor"
 
 [server]
-freenode.addresses = "chat.freenode.net/6667"
-freenode.proxy
-freenode.ipv6
-freenode.ssl
-freenode.ssl_cert
-freenode.ssl_priorities
-freenode.ssl_dhkey_size
-freenode.ssl_fingerprint
-freenode.ssl_verify
-freenode.password
-freenode.capabilities
-freenode.sasl_mechanism
-freenode.sasl_username
-freenode.sasl_password
-freenode.sasl_timeout
-freenode.autoconnect = on
-freenode.autoreconnect
-freenode.autoreconnect_delay
-freenode.nicks
-freenode.username
-freenode.realname
-freenode.local_hostname
-freenode.command
-freenode.command_delay
-freenode.autojoin = "#sohre"
-freenode.autorejoin
-freenode.autorejoin_delay
-freenode.connection_timeout
-freenode.anti_flood_prio_high
-freenode.anti_flood_prio_low
-freenode.away_check
-freenode.away_check_max_nicks
-freenode.default_msg_kick
-freenode.default_msg_part
-freenode.default_msg_quit
-freenode.notify
+libera.addresses = "irc.libera.chat/6697"
+libera.proxy
+libera.ipv6
+libera.ssl
+libera.ssl_cert
+libera.ssl_priorities
+libera.ssl_dhkey_size
+libera.ssl_fingerprint
+libera.ssl_verify
+libera.password
+libera.capabilities
+libera.sasl_mechanism
+libera.sasl_username
+libera.sasl_password
+libera.sasl_timeout
+libera.autoconnect = on
+libera.autoreconnect
+libera.autoreconnect_delay
+libera.nicks
+libera.username
+libera.realname
+libera.local_hostname
+libera.command
+libera.command_delay
+libera.autojoin = "#sohre"
+libera.autorejoin
+libera.autorejoin_delay
+libera.connection_timeout
+libera.anti_flood_prio_high
+libera.anti_flood_prio_low
+libera.away_check
+libera.away_check_max_nicks
+libera.default_msg_kick
+libera.default_msg_part
+libera.default_msg_quit
+libera.notify
