--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,6 @@ permissions:
 
 jobs:
   docker-ci:
-    uses: Jmainguy/docker-workflows/.github/workflows/docker-ci.yml@context
+    uses: Jmainguy/docker-workflows/.github/workflows/docker-ci.yml@v2
     with:
       docker_context: docker/
