--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   release-please:
-    uses: Jmainguy/docker-workflows/.github/workflows/docker-release.yml@v2
+    uses: Jmainguy/docker-workflows/.github/workflows/docker-release.yml@v3
     secrets:
       docker_username: ${{ secrets.DOCKER_USERNAME }}
       docker_password: ${{ secrets.DOCKER_PASSWORD }}
@@ -19,5 +19,10 @@ jobs:
       docker_url: zot.soh.re
       image_name: ${{ github.event.repository.name }}
       authors: "Jonathan Seth Mainguy <jon@soh.re>"
+      url: "${{ GITHUB_SERVER_URL }}/${{GITHUB_REPOSITORY }}"
+      source: "${{ GITHUB_SERVER_URL }}/${{GITHUB_REPOSITORY }}"
+      description: "Container for serving soh.re"
+      title: "soh.re"
+      licenses: "GPL-2.0"
       vendor: "Jmainguy"
       docker_context: docker/
