--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,8 +19,8 @@ jobs:
       docker_url: zot.soh.re
       image_name: ${{ github.event.repository.name }}
       authors: "Jonathan Seth Mainguy <jon@soh.re>"
-      url: "${{ GITHUB_SERVER_URL }}/${{GITHUB_REPOSITORY }}"
-      source: "${{ GITHUB_SERVER_URL }}/${{GITHUB_REPOSITORY }}"
+      url: "https://github.com/Jmainguy/soh.re"
+      source: "https://github.com/Jmainguy/soh.re"
       description: "Container for serving soh.re"
       title: "soh.re"
       licenses: "GPL-2.0"
